--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,9 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs.kotlin'
-    id 'com.google.firebase.crashlytics'
-}
 
+}
+//apply plugin: 'com.google.gms.google-services'
 android {
     compileSdk 31
 
@@ -17,7 +17,7 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
-
+        vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -39,13 +39,11 @@ android {
         dataBinding true
         viewBinding true
     }
+
 }
 
 dependencies {
 
-    implementation project(path: ':domain')
-    implementation project(path: ':data')
-    implementation project(path: ':errorinfo')
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -55,23 +53,20 @@ dependencies {
     // Navigation components
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-
+   // implementation 'com.google.android:flexbox:0.3.2'
     // Glide for image caching
     implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.firebase:firebase-common-ktx:20.1.0'
     kapt "com.github.bumptech.glide:compiler:$glide_version"
 
     // View model
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.10"
-
     implementation "androidx.fragment:fragment-ktx:1.4.1"
     implementation "androidx.activity:activity-ktx:1.4.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewModelKtx_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$viewModelKtx_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.4.1'
-    implementation 'androidx.preference:preference-ktx:1.2.0'
+
    /** Kotlinx Serialization Converter */
     implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0'
     // Networking
@@ -88,10 +83,18 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.3.0'
     implementation 'androidx.databinding:databinding-runtime:7.1.2'
     kapt 'com.google.dagger:hilt-compiler:2.39.1'
-
-    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.9'
-    implementation 'com.google.firebase:firebase-analytics-ktx:20.1.1'
-
+    //Room Database
+    kapt "androidx.room:room-compiler:2.4.2"
+    implementation "androidx.room:room-runtime:2.4.2"
+    implementation "androidx.room:room-ktx:2.4.2"
+    //WindowManager
+    implementation 'androidx.window:window:1.0.0-alpha09'
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    //implementation "androidx.camera:camera-video:${camerax_version}"
+    implementation "androidx.camera:camera-view:${camerax_version}"
+    //implementation "androidx.camera:camera-extensions:${camerax_version}"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
