--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1"
-        classpath 'com.google.gms:google-services:4.3.10'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
-        classpath 'com.google.firebase:firebase-appdistribution-gradle:3.0.1'
-
+       // classpath 'com.google.gms:google-services:4.3.10'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -42,4 +39,5 @@ ext {
     okhttp_version = '4.9.0'
     coroutines_adapter_version = '0.9.2'
     coroutines_version = '1.6.0'
+    camerax_version = "1.1.0-beta02"
 }
